# llama_server_cpp

./: CMakeLists.txt  README.md
include/: llama_configs.h  llama_inputs.h  llama_session.h  llama_strategy.h
src/: llama_session.cpp  model_server.cpp
src/internal/: id_chunk.h  input_encoder.h  kv_scheduler.h  llama_context.h  llama_converter.h  sampler.h  streamer.h  templater.h  tokenizer.h
src/llama_wrapper/: llama_context.cpp
src/session_component/: history_manager.cpp  input_encoder.cpp  kv_scheduler.cpp  sampler.cpp  streamer.cpp  templater.cpp  tokenizer.cpp
src/utils/: llama_strategy.cpp
test/test_cache/: CMakeLists.txt  main.cpp
test/test_generate/: main.cpp
test/test_grammar/: CMakeLists.txt  main.cpp
test/test_mtmd/: CMakeLists.txt  main.cpp
